[package]
authors = ["夕舞八弦 <1677759063@qq.com>"]
edition = "2018"
name = "wiki-edit"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = {version = "0.11", features = ["blocking", "json", "cookies"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
once_cell = "1.7.2"
[dependencies.clap]
version = "2.32"
